- Removed a DCHECK that prevented "start logging" a second time. - Parent window is now blocked when the save dialog pops up. - The SelectFileDialog instance is now cleaned up as soon as the user saves or cancels.

BUG=657219

Review-Url: https://codereview.chromium.org/2440173003
Cr-Commit-Position: refs/heads/master@{#427422}

Former-commit-id: bfe6949954d4ed616ae69479b17f79142317c722